--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header id="landing-page">
         <div class="landing-content">
             <div class="text-content">
-                <h1>Lei Angel Conceotion</h1>
+                <h1>Lei Angel Concepcion</h1>
                 <p>eto na eto na.</p>
                 <div class="social-media">
                   <a href="https://twitter.com/yourprofile" target="_blank" aria-label="Twitter">
