--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <header id="landing-page">
         <div class="landing-content">
             <div class="text-content">
-                <h1>Lei Angel Concepcion</h1>
-                <p>eto na eto na.</p>
+                <div class="intro">
+                    <h1>Lei Angel Conceotion</h1>
+                    <p>eto na eto na.</p>
+                </div>
                 <div class="social-media">
                   <a href="https://twitter.com/yourprofile" target="_blank" aria-label="Twitter">
                       <i class="fab fa-twitter"></i>
