--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="landing-content">
             <div class="text-content">
                 <div class="intro">
-                    <h1>Lei Angel Conceotion</h1>
+                    <h1>Lei Angel Concepcion</h1>
                     <p>eto na eto na.</p>
                 </div>
                 <div class="social-media">
