--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
         <!-- About Me -->
         <section id="about">
             <h2>About Me</h2>
-            <p>Hello! I am Lei, a BSIS student with a passion for making baby cry. I have extensive experience in making baby cry.</p>
+            <p>Hello! I am Lei, a BSIS student with a passion for writing peom and story. I have extensive experience in making story.</p>
             <h3>Skills</h3>
             <ul>
-                <li>Mangagat</li>
-                <li>Mangurut</li>
-                <li>Pumisil</li>
+                <li>Writing Stories</li>
+                <li>Programming</li>
+                <li>Cooking and Eating</li>
             </ul>
         </section>
 
@@ -78,8 +78,8 @@
                         <img src="paper-plane.png" alt="Project 2">
                     </div>
                     <div class="project-info">
-                        <h3>Paper plane</h3>
-                        <p>Lumilipad na papel</p>
+                        <h3>Portfolio</h3>
+                        <p>Creating Own Portfolio</p>
                     </div>
                 </div>
             </div>
@@ -89,9 +89,9 @@
             <h2>Hobbies & Activities</h2>
             <p>In my free time, I enjoy the following activities:</p>
             <ul>
-                <li>Mag aral</li>
-                <li>study</li>
-                <li>learn</li>
+                <li>Gaming</li>
+                <li>studying</li>
+                <li>learning and Exploring</li>
             </ul>
         </section>
 
