--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="landing-content">
             <div class="text-content">
                 <div class="intro">
-                    <h1>Lei Angel Concepcion</h1>
-                    <p>eto na eto na.</p>
+                    <h1>Lei Angel Concepcion A.</h1>
+                    <p>Explore Until We Reach our Limit.</p>
                 </div>
                 <div class="social-media">
                   <a href="https://twitter.com/yourprofile" target="_blank" aria-label="Twitter">
