--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                         <img src="paper-boat.png" alt="Project 1">
                     </div>
                     <div class="project-info">
-                        <h3>Paper Boat</h3>
-                        <p>Lumalangoy na papel</p>
+                        <h3>Prototype</h3>
+                        <p>Designing a prototype on selected system.</p>
                     </div>
                 </div>
 
